--- a/style.css
+++ b/style.css
@@ -295,11 +295,14 @@
 #the-creation .piece__media {
   aspect-ratio: var(--buy-the-ticket-main-ratio, 10/8);
 }
-
+#acetyl-fear .piece__media img{
+  width: 50%;
+  height: 50%;
+}
 .piece__media img {
   display: block;
-  width: 60%;
-  height: 60%;
+  width: 100%;
+  height: 100%;
   object-fit: cover;
   object-position: center;
   transition: transform .6s ease, filter .6s ease;
